# 100daysofcode

./: pyproject.toml
Day 1/: band_name_generator.py
Day 2/: tip_calculator.py
Day 3/: treasure_island.py
Day 4/: rock_paper_scissors.py
Day 5/: pyssword.py
