[tool.poetry]
name = "100daysofcode"
version = "0.1.0"
description = "100 days of code is a challenge to enhance your code skills every day 100 days of code is a challenge to enhance your code skills every day"
authors = ["Rock <sh.alencar@rocketmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
